# 247bishops

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  app.py  bower.json  calc_deterministic.sh  code_checks.sh  pyproject.toml  requirements-dev.txt  run_flask.py
.github/workflows/: code_checks.yml  deploy.yml  http_obs.yml
css/: main.css  work_board.css
html/: main.html  maintenance.html  terms_conditions.html  test.html
install_front_end_deps/: main.py
javascript/: main.js  work_board.js
tests/: conftest.py  http_obs.py  server.py  test_main.py  test_not_found.py  test_server.py  test_work_board.py
webapp_python/: main.py
